--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "algolia/algoliasearch-client-php": "^1.25",
         "doctrine/dbal": "^2.6",
         "fideloper/proxy": "~3.3",
         "gitonomy/gitlib": "^1.0",
