--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "bootstrap": "^4.0.0",
-        "normalize.css": "^7.0.0"
+        "normalize.css": "^7.0.0",
+        "vue-instantsearch": "^1.3.3"
     }
 }
