--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "dependencies": {
         "bootstrap": "^4.0.0",
         "normalize.css": "^7.0.0",
-        "vue-instantsearch": "^1.3.3"
+        "turbolinks": "^5.1.1",
+        "vue-instantsearch": "^1.3.3",
+        "vue-turbolinks": "^2.0.1"
     }
 }
