Revert "Add turbolinks"
This reverts commit 6f1b874f25a8a3461355c1720cb7741f44065ce0.

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,4 @@
 {
     "/js/search.js": "/js/search.js",
-    "/css/app.css": "/css/app.css",
-    "/js/app.js": "/js/app.js"
+    "/css/app.css": "/css/app.css"
 }
