--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "bootstrap": "^4.0.0",
         "clipboard": "^1.7.1",
         "normalize.css": "^7.0.0",
+        "octicons": "^7.1.0",
         "vue-instantsearch": "^1.3.3"
     }
 }
