--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=7.0.0",
         "algolia/algoliasearch-client-php": "^1.25",
+        "backup-manager/laravel": "^1.3",
         "doctrine/dbal": "^2.6",
         "fideloper/proxy": "~3.3",
         "gitonomy/gitlib": "^1.0",
