--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
+    "/js/home_search.js": "/js/home_search.js",
     "/js/search.js": "/js/search.js",
     "/css/app.css": "/css/app.css",
     "/js/minisearch.js": "/js/minisearch.js",
