--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "algolia/algoliasearch-client-php": "^1.25",
         "backup-manager/laravel": "^1.3",
         "doctrine/dbal": "^2.6",
+        "erusev/parsedown": "^1.7",
         "fideloper/proxy": "~3.3",
         "gitonomy/gitlib": "^1.0",
         "laravel/framework": "5.5.*",
