Move refinement lists into dropdowns

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,8 +1,8 @@
 {
     "/js/home_search.js": "/js/home_search.js",
     "/js/search.js": "/js/search.js",
+    "/css/app.css": "/css/app.css",
     "/js/minisearch.js": "/js/minisearch.js",
     "/js/bootstrap.bundle.min.js": "/js/bootstrap.bundle.min.js",
-    "/js/clipboard.min.js": "/js/clipboard.min.js",
-    "/css/app.css": "/css/app.css"
+    "/js/clipboard.min.js": "/js/clipboard.min.js"
 }
