--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,12 @@
         "backup-manager/laravel": "^1.3",
         "doctrine/dbal": "^2.6",
         "erusev/parsedown": "^1.7",
-        "fideloper/proxy": "~3.3",
+        "fideloper/proxy": "~4.0",
         "gitonomy/gitlib": "^1.0",
-        "laravel/framework": "5.5.*",
+        "laravel/framework": "5.7.*",
         "laravel/tinker": "~1.0",
-        "paquettg/php-html-parser": "^1.7"
+        "paquettg/php-html-parser": "^1.7",
+        "spatie/laravel-sitemap": "^5.2"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
